# opengl-game

./: CMakeLists.txt  LICENSE  OpenGL  README.md
lib/glew/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/glm/: CMakeLists.txt
res/shaders/: Basic.shader  Sprite.glsl
src/: Application.cpp  Game.cpp  Game.h  IndexBuffer.cpp  Shader.cpp  Shader.h  Sprite.h  Texture.cpp  Texture.h  VertexBuffer.h  gpch.h
src/core/events/: Event.cpp
src/core/events/include/: Event.h
src/core/impl/: Buffer.cpp  Camera.cpp  Log.cpp  OpenGLDebug.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  Texture.cpp  Window.cpp
src/core/include/: Buffer.h  Camera.h  Log.h  OpenGLDebug.h  ResourceManager.h  Shader.h  SpriteRenderer.h  Texture.h  Window.h
src/game/: Application.cpp  Character.cpp  Character.h  Game.cpp  Game.h  IndexBuffer.h  Shader.cpp  Shader.h  Triangle.cpp  Triangle.h  VertexBuffer.cpp
src/game/res/shaders/: Character.frag.glsl  Character.vert.glsl
src/res/shaders/: Basic.shader
